# cpp-activity-checker-tg-bot

./: .clang-format  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  database.h  main.cpp
include/: database.h
src/: database.cpp
toolchains/: clang-libcxx-toolchain.cmake
